--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /hello-world-angular
 /Node/mongo-demo/node_modules/
+/Node/async-demo/node_modules/
+/Node/express-demo/node_modules/
+/Node/lion-lib/node_modules/
+/Node/npm-demo/node_modules/
