--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 /hello-world-angular
+/Angular/hello-world/
+/Angular/Test/hello-world/
+
 /Node/mongo-demo/node_modules/
 /Node/async-demo/node_modules/
 /Node/express-demo/node_modules/
 /Node/lion-lib/node_modules/
 /Node/npm-demo/node_modules/
+
