--- a/todo-backend/package.json
+++ b/todo-backend/package.json
@@ -9,7 +9,9 @@
   "author": "Chikku P A",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.0.1",
     "express": "^4.16.4",
+    "joi": "^14.3.1",
     "mongoose": "^5.4.13"
   }
 }
