--- a/todo-backend/package.json
+++ b/todo-backend/package.json
@@ -9,9 +9,12 @@
   "author": "Chikku P A",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.4",
     "config": "^3.0.1",
     "express": "^4.16.4",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.0",
+    "lodash": "^4.17.11",
     "mongoose": "^5.4.13"
   }
 }
